--- a/ecen743-sp25-hw02.ipynb
+++ b/ecen743-sp25-hw02.ipynb
@@ -104,10 +104,11 @@
     "env = gym.make('FrozenLake-v1', desc=None,map_name=\"4x4\", is_slippery=True)\n",
     "while hasattr(env, 'env'):\n",
     "    env = env.env\n",
+    "    \n",
     "gamma = 0.9\n",
     "\n",
     "\n",
-    "# The optimal Q-value function from HW01\n",
+    "# The optimal Q-value function from HW01 using discount factor as 0.9\n",
     "Q_opt = np.array([[0.06887237, 0.06663045, 0.06663045, 0.05974078],\n",
     "                 [0.03907988, 0.04297989, 0.04073797, 0.06139887],\n",
     "                 [0.07439831, 0.06881719, 0.0727172,  0.05747583],\n",
